crates/fixtures/tests/snapshots/hostile__content_page_setup_conflicting_margins.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Conflicting margins must keep this text ",
            "glyphs": [
              {
                "id": 4,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 42,
                "x": 7108,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 41,
                "x": 13292,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 415,
                "x": 20118,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 5
                }
              },
              {
                "id": 36,
                "x": 27012,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 30,
                "x": 30369,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 47,
                "x": 35866,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 36,
                "x": 39527,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 41,
                "x": 42884,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 34,
                "x": 49710,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 55545,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 40,
                "x": 58170,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 28,
                "x": 68319,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 45,
                "x": 73996,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 34,
                "x": 78648,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 36,
                "x": 84483,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 41,
                "x": 87840,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 46,
                "x": 94666,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 1,
                "x": 99555,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 40,
                "x": 102180,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 48,
                "x": 112273,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 46,
                "x": 118840,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 47,
                "x": 123729,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 1,
                "x": 127390,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 38,
                "x": 130015,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 32,
                "x": 135951,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 32,
                "x": 141696,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 43,
                "x": 147328,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 1,
                "x": 153895,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 47,
                "x": 156520,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 35,
                "x": 160181,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 36,
                "x": 166951,
                "y": 10707,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 46,
                "x": 170308,
                "y": 10707,
                "text": {
                  "start": 33,
                  "end": 34
                }
              },
              {
                "id": 1,
                "x": 175197,
                "y": 10707,
                "text": {
                  "start": 34,
                  "end": 35
                }
              },
              {
                "id": 47,
                "x": 177822,
                "y": 10707,
                "text": {
                  "start": 35,
                  "end": 36
                }
              },
              {
                "id": 32,
                "x": 181483,
                "y": 10707,
                "text": {
                  "start": 36,
                  "end": 37
                }
              },
              {
                "id": 51,
                "x": 187228,
                "y": 10707,
                "text": {
                  "start": 37,
                  "end": 38
                }
              },
              {
                "id": 47,
                "x": 193153,
                "y": 10707,
                "text": {
                  "start": 38,
                  "end": 39
                }
              },
              {
                "id": 1,
                "x": 196814,
                "y": 10707,
                "text": {
                  "start": 39,
                  "end": 40
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "readable and report the fallback.",
            "glyphs": [
              {
                "id": 45,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 4652,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 28,
                "x": 10284,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 31,
                "x": 16017,
                "y": 24224,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 28,
                "x": 22291,
                "y": 24224,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 29,
                "x": 28024,
                "y": 24224,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 39,
                "x": 34411,
                "y": 24224,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 37768,
                "y": 24224,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 43513,
                "y": 24224,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 28,
                "x": 46138,
                "y": 24224,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 41,
                "x": 51815,
                "y": 24224,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 31,
                "x": 58641,
                "y": 24224,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 1,
                "x": 65028,
                "y": 24224,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 45,
                "x": 67653,
                "y": 24224,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 32,
                "x": 72305,
                "y": 24224,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 43,
                "x": 77937,
                "y": 24224,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 42,
                "x": 84504,
                "y": 24224,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 45,
                "x": 90688,
                "y": 24224,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 47,
                "x": 95667,
                "y": 24224,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 1,
                "x": 99328,
                "y": 24224,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 47,
                "x": 101953,
                "y": 24224,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 35,
                "x": 105614,
                "y": 24224,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 32,
                "x": 112384,
                "y": 24224,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 1,
                "x": 118129,
                "y": 24224,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 33,
                "x": 120754,
                "y": 24224,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 28,
                "x": 124741,
                "y": 24224,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 39,
                "x": 130474,
                "y": 24224,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 39,
                "x": 133831,
                "y": 24224,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 29,
                "x": 137188,
                "y": 24224,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 28,
                "x": 143687,
                "y": 24224,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 30,
                "x": 149420,
                "y": 24224,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 38,
                "x": 154793,
                "y": 24224,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 473,
                "x": 160954,
                "y": 24224,
                "text": {
                  "start": 32,
                  "end": 33
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
